--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>:root{--color-accent-red:#ef2f32;--color-accent-green:#25b19d;--color-bg-primary:#15202b;--color-bg-surface:#1c2a3a;--color-text-high:#fff;--color-text-med:#a3a6ad;--color-text-low:#6a6e78;--space-xs:.25rem;--space-sm:.5rem;--space-md:1rem;--space-lg:1.5rem;--space-xl:2rem;--font-base:"Inter",sans-serif;--radius-sm:4px;--radius-md:6px}body{background:var(--color-bg-primary);color:var(--color-text-med);font-family:var(--font-base);margin:0;padding:var(--space-lg)}.card{background:var(--color-bg-surface);border-radius:var(--radius-md);padding:var(--space-md)}.card,h2{color:var(--color-text-high)}h2{margin-bottom:var(--space-sm)}.button--accent{background:var(--color-accent-red);border-radius:var(--radius-sm);color:#fff;padding:var(--space-sm) var(--space-md)}</style>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Ctp_Oo3a.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Rdq8Hzuo.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/IyPFaDPA.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dk4GAjI-.js">
-<script type="module" src="/_nuxt/Ctp_Oo3a.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1748625358584,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"45829524-8b61-4086-a39a-e5e480af2c91",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="modulepreload" as="script" crossorigin href="/transit-tracker/_nuxt/Ctp_Oo3a.js">
+<link rel="prefetch" as="script" crossorigin href="/transit-tracker/_nuxt/Rdq8Hzuo.js">
+<link rel="prefetch" as="script" crossorigin href="/transit-tracker/_nuxt/IyPFaDPA.js">
+<link rel="prefetch" as="script" crossorigin href="/transit-tracker/_nuxt/Dk4GAjI-.js">
+<script type="module" src="/transit-tracker/_nuxt/Ctp_Oo3a.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1748625683821,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/transit-tracker/",buildId:"b8d5f57f-34cc-412d-9acf-70492f45a095",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
